// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error-icon prop 1`] = `
<div class="buri-image">
  <div class="buri-image__error"><i class="buri-icon buri-icon-error buri-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy load 1`] = `
<div class="buri-image"><img class="buri-image__img">
  <div class="buri-image__loading"><i class="buri-icon buri-icon-photo-o buri-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load error event 1`] = `
<div class="buri-image">
  <div class="buri-image__error"><i class="buri-icon buri-icon-warning-o buri-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load load event 1`] = `<div class="buri-image"><img class="buri-image__img"></div>`;

exports[`load event 1`] = `<div class="buri-image"><img src="https://img.yzcdn.cn/buri/cat.jpeg" class="buri-image__img"></div>`;

exports[`load event 2`] = `
<div class="buri-image"><img src="" class="buri-image__img">
  <div class="buri-image__loading"><i class="buri-icon buri-icon-photo-o buri-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`loading-icon prop 1`] = `
<div class="buri-image"><img class="buri-image__img">
  <div class="buri-image__loading"><i class="buri-icon buri-icon-success buri-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`radius prop 1`] = `
<div class="buri-image" style="overflow: hidden; border-radius: 3px;"><img src="https://img.yzcdn.cn/buri/cat.jpeg" class="buri-image__img">
  <div class="buri-image__loading"><i class="buri-icon buri-icon-photo-o buri-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`show-error prop 1`] = `<div class="buri-image"></div>`;

exports[`show-loading prop 1`] = `<div class="buri-image"><img class="buri-image__img"></div>`;
